# Valar

./: Cargo.toml  Readme.md
benches/: router.rs
boilerplate/: Cargo.toml
boilerplate/src/: app.rs  lib.rs  main.rs  routes.rs
boilerplate/src/http/: controllers.rs
boilerplate/src/http/controllers/: counter.rs  dashboard.rs
boilerplate/src/routes/: api.rs  web.rs
boilerplate/tests/: tests.rs
boilerplate/tests/controllers/: dashboard.rs
src/: core.rs  http.rs  lib.rs  main.rs  routing.rs
src/core/: application.rs  server.rs
src/http/: error.rs  handler.rs  request.rs  response.rs
src/routing/: matcher.rs  route.rs  router.rs
tests/: lib.rs
valar/: Cargo.toml
valar/src/: app.rs  application.rs  config.rs  database.rs  drivers.rs  facades.rs  http.rs  lib.rs  routing.rs  services.rs  state.rs  utils.rs
valar/src/database/: builder.rs  executor.rs  query.rs
valar/src/database/builder/: parameters.rs  selects.rs  wheres.rs
valar/src/drivers/: cache.rs
valar/src/drivers/cache/: memory.rs
valar/src/facades/: cache.rs
valar/src/http/: client.rs  context.rs  cookie.rs  cookies.rs  error.rs  headers.rs  middleware.rs  request.rs  response.rs  server.rs  session.rs
valar/src/http/middleware/: cookies.rs  logger.rs  session.rs
valar/src/routing/: matcher.rs  middleware.rs  route.rs  router.rs
valar/src/services/: cache.rs  session.rs
valar/src/services/cache/: memory.rs
