[package]
name = "boilerplate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
valar = { path = "../valar" }
serde = { version = "1", features = ["derive"] }
tokio-postgres = { version = "0.7.7" }
tokio = { version = "1.22.0", features = ["full"] }
async-trait = { version = "0.1.60" }
postgres-types = { version = "0.2.4", features = ["derive"] }
uuid = { version = "1.2.2" }
